# rc-linear

./: .bazelrc  .gitignore  BUILD  MODULE.bazel
src/: main.cpp  perf.hpp  plotting.hpp  rc.cpp  rc.h  rc.hpp  rc_simd.hpp  scene.cpp  scene.h  scene.hpp  stats.hpp  texture.h  texture.hpp  texture_simd.hpp
