"""Bazel dependencies for the rc_linear module."""

module(
  name = "rc_linear",
  version = "0.1.0",
)

# Import platforms for OS-specific builds
bazel_dep(name = "platforms", version = "0.0.11")

# Hedron's Compile Commands Extractor for Bazel
#
# A Bazel rule to generate compile_commands.json for use with clangd, ccls, etc.
# Useful for C++ development with Bazel in editors like VSCode, Vim, etc.
# https://github.com/hedronvision/bazel-compile-commands-extractor
#
# Generate compile_commands.json for use with clangd:
# $ bazel run @hedron_compile_commands//:refresh_all
#
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "4f28899228fb3ad0126897876f147ca15026151e", # 2024-10-07
)

# Use http_archive for GLEW pre-built release (contains generated sources)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "glew",
  url = "https://github.com/nigels-com/glew/releases/download/glew-2.2.0/glew-2.2.0.tgz",
  sha256 = "d4fc82893cfb00109578d0a1a2337fb8ca335b3ceccf97b97e5cc7f08e4353e1",
  strip_prefix = "glew-2.2.0",
  build_file = "//third_party:glew.BUILD",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# GLM: OpenGL Mathematics
#
# Provides a header-only C++ math library for graphics software based on the
# OpenGL Shading Language (GLSL) specifications.
# https://glm.g-truc.net/
#
git_repository(
  name = "glm",
  remote = "https://github.com/g-truc/glm.git",
  commit = "2d4c4b4dd31fde06cfffad7915c2b3006402322f",
  build_file = "//third_party:glm.BUILD",
)

# GLFW: Graphics Library Framework
#
# A library for creating windows, contexts, and managing input and events
# in OpenGL, OpenGL ES, and Vulkan applications.
# https://www.glfw.org/
#
git_repository(
  name = "glfw",
  commit = "3fa2360720eeba1964df3c0ecf4b5df8648a8e52", # v3.3.10
  remote = "https://github.com/glfw/glfw.git",
  build_file = "//third_party:glfw.BUILD",
)

# ImGui: Immediate Mode Graphical User Interface
#
# A bloat-free graphical user interface library for C++.
# https://github.com/ocornut/imgui
#
git_repository(
  name = "imgui",
  remote = "https://github.com/ocornut/imgui.git",
  commit = "bf75bfec48fc00f532af8926130b70c0e26eb099", # v1.92.3
  build_file = "//third_party:imgui.BUILD",
)

# ImPlot: Immediate Mode Plotting for Dear ImGui
#
# A plotting library for Dear ImGui.
# https://github.com/epezent/implot
#
git_repository(
  name = "implot",
  remote = "https://github.com/epezent/implot.git",
  commit = "3da8bd34299965d3b0ab124df743fe3e076fa222", # v0.16.x
  build_file = "//third_party:implot.BUILD",
)
